switch to jekyll and markdown

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>RESTful Open Annoatation specification</title>
+    <title>{{ page.title }}</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -29,19 +29,8 @@
 	-->
       </header>
       <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>RESTful Open Annotation</h3>
 
-<p>This is a placeholder for RESTful Open Annotation documentation.</p>
-
-<p>This documentation is hosted on GitHub. You can start editing by
-cloning the repository and switching to the `gh-pages` branch:</p>
-
-<pre><code>$ git clone git@github.com:restful-open-annotation/spec.git
-$ git checkout gh-pages
-</code></pre>
-
-<p>Your pushed changes will then show up on this page.</p>
+{{ content }}
 
       </section>
       <footer>
