--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="stylesheets/hint.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -27,6 +28,14 @@
           <li><a href="https://github.com/restful-open-annotation/spec">View On <strong>GitHub</strong></a></li>
         </ul>
 	-->
+	<h3>Contents</h3>
+	<div><a href="index.html">Home</a></div>
+	<div><a href="quickstart.html">Quickstart</a></div>
+	<div><a href="data-model.html">Data model</a></div>
+	<div><a href="json-ld.html">JSON-LD</a></div>
+	<div><a href="context.html">OA context</a></div>
+	<div><a href="api-detail.html">API details</a></div>
+	<div><a href="tools.html">Tools</a></div>
       </header>
       <section>
 
@@ -34,8 +43,7 @@
 
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/restful-open-annotation">restful-open-annotation</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small class="transparent">Hosted on <a href="https://pages.github.com/">GitHub Pages</a> &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
@@ -49,6 +57,5 @@
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
-
   </body>
 </html>
