--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,10 +1,15 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700);
+@import url(https://fonts.googleapis.com/css?family=Lato:300italic,400italic,700italic,300,400,700);
 
 body {
   padding:50px;
   font:14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#777;
   font-weight:300;
+}
+
+div.wrapper {
+  /* test of weight 400 vs. the theme default 300. TODO: remove one. */
+  font-weight: 400;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -96,7 +101,7 @@ img {
 }
 
 header {
-  width:270px;
+  width:220px;
   float:left;
   position:fixed;
 }
@@ -118,7 +123,7 @@ header ul {
   border-radius:5px;
   border:1px solid #d2d2d2;
   box-shadow:inset #fff 0 1px 0, inset rgba(0,0,0,0.03) 0 -1px 0;
-  width:270px;
+  width:220px;
 }
 
 header li {
@@ -160,7 +165,7 @@ header ul a strong {
 }
 
 section {
-  width:500px;
+  width:620px;
   float:right;
   padding-bottom:50px;
 }
@@ -177,11 +182,16 @@ hr {
 }
 
 footer {
-  width:270px;
+  width:220px;
   float:left;
   position:fixed;
-  bottom:50px;
+  bottom:10px;
 }
+
+.transparent {
+  opacity: 0.5;
+}
+
 
 @media print, screen and (max-width: 960px) {
   
@@ -252,4 +262,8 @@ footer {
     font-size:12pt;
     color:#444;
   }
+}
+
+.hint, .hint--top, [data-hint] {
+  text-decoration: underline;
 }
