revise quickstart + related tweaks

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <link rel="stylesheet" href="stylesheets/hint.css">
+    <link rel="stylesheet" href="stylesheets/local.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -28,22 +29,16 @@
         <h1>RESTful OA</h1>
         <p>RESTful Open Annotation API specification</p>
 
-        <p class="view"><a href="https://github.com/restful-open-annotation/spec">View the Project on GitHub</a></p>
+        <p class="view"><a href="https://github.com/restoa/spec">View the Project on GitHub</a></p>
 
-	<!--
-        <ul>
-          <li><a href="https://github.com/restful-open-annotation/spec/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/restful-open-annotation/spec/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/restful-open-annotation/spec">View On <strong>GitHub</strong></a></li>
-        </ul>
-	-->
 	<h3>Contents</h3>
 	<div><a href="index.html">Home</a></div>
 	<div><a href="quickstart.html">Quickstart</a></div>
 	<div><a href="data-model.html">Data model</a></div>
 	<div><a href="json-ld.html">JSON-LD</a></div>
 	<div><a href="context.html">OA context</a></div>
-	<div><a href="api-detail.html">API details</a></div>
+	<div><a href="api-core.html">Core API</a></div>
+	<div><a href="extensions.html">Extensions</a></div>
 	<div><a href="tools.html">Tools</a></div>
       </header>
       <section id="spec-content">
@@ -52,7 +47,7 @@
 
       </section>
       <footer>
-        <p><small class="transparent">Hosted on <a href="https://pages.github.com/">GitHub Pages</a> &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small class="transparent">&copy; 2015 REST-OA Collaboration</small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
