--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -39,7 +39,7 @@
 	<div><a href="context.html">OA context</a></div>
 	<div><a href="api-core.html">Core API</a></div>
 	<div><a href="extensions.html">Extensions</a></div>
-	<div><a href="tools.html">Tools</a></div>
+	<!-- <div><a href="tools.html">Tools</a></div> -->
       </header>
       <section id="spec-content">
 
