--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -29,7 +29,7 @@
         <h1>RESTful OA</h1>
         <p>RESTful Open Annotation API specification</p>
 
-        <p class="view"><a href="https://github.com/restoa/spec">View the Project on GitHub</a></p>
+        <p class="view"><a href="https://github.com/restful-open-annotation/spec">View the Project on GitHub</a></p>
 
 	<h3>Contents</h3>
 	<div><a href="index.html">Home</a></div>
